[gd_scene load_steps=9 format=3 uid="uid://477gakkela1w"]

[ext_resource type="Script" path="res://UI/HUD/hud.gd" id="1_6av76"]
[ext_resource type="Texture2D" uid="uid://bocvyqunbm3v6" path="res://assets/art/items/red_vial.png" id="2_rqvgt"]
[ext_resource type="Texture2D" uid="uid://bxwx11k1u87ej" path="res://assets/texture/item_frame.png" id="3_lo0vu"]
[ext_resource type="Texture2D" uid="uid://c0xv1o06cev0t" path="res://assets/art/items/blue_vial.png" id="5_tmcuc"]
[ext_resource type="Texture2D" uid="uid://dnhnh5xvnwvav" path="res://assets/art/items/green_vial.png" id="6_rgrq4"]
[ext_resource type="Texture2D" uid="uid://xyn6iwn6pqu8" path="res://assets/art/items/brown_vial.png" id="7_sux4n"]
[ext_resource type="Texture2D" uid="uid://clo6706pa3mgw" path="res://assets/art/items/purple_vial.png" id="8_1cbnb"]
[ext_resource type="Texture2D" uid="uid://dus5aya120jhq" path="res://assets/art/items/vial.png" id="9_5s17e"]

[node name="HUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_6av76")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -338.0
offset_top = -120.0
offset_right = 335.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VialPanel" type="Panel" parent="Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="VialSelect1" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/VialPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rqvgt")
stretch_mode = 5

[node name="ButtonNumber1" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/VialPanel/VialSelect1"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -22.0
offset_right = -4.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
text = "1"
fit_content = true

[node name="Frame1" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/VialPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_lo0vu")
stretch_mode = 5

[node name="VialPanel2" type="Panel" parent="Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="VialSelect2" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/VialPanel2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_tmcuc")
stretch_mode = 5

[node name="ButtonNumber2" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/VialPanel2/VialSelect2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -22.0
offset_right = -4.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
text = "2"
fit_content = true

[node name="Frame2" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/VialPanel2"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_lo0vu")
stretch_mode = 5

[node name="VialPanel3" type="Panel" parent="Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="VialSelect3" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/VialPanel3"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_rgrq4")
stretch_mode = 5

[node name="ButtonNumber3" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/VialPanel3/VialSelect3"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -22.0
offset_right = -4.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
text = "3"
fit_content = true

[node name="Frame3" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/VialPanel3"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_lo0vu")
stretch_mode = 5

[node name="VialPanel4" type="Panel" parent="Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="VialSelect4" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/VialPanel4"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_sux4n")
stretch_mode = 5

[node name="ButtonNumber4" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/VialPanel4/VialSelect4"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -22.0
offset_right = -4.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
text = "4"
fit_content = true

[node name="Frame4" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/VialPanel4"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_lo0vu")
stretch_mode = 5

[node name="VialPanel5" type="Panel" parent="Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="VialSelect5" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/VialPanel5"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_1cbnb")
stretch_mode = 5

[node name="ButtonNumber5" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/VialPanel5/VialSelect5"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -22.0
offset_right = -4.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
text = "5"
fit_content = true

[node name="Frame5" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/VialPanel5"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_lo0vu")
stretch_mode = 5

[node name="VialPanel6" type="Panel" parent="Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="OpenMixMenu" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/VialPanel6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_5s17e")
stretch_mode = 5

[node name="ButtonNumber5" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/VialPanel6/OpenMixMenu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -22.0
offset_right = -4.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
text = "R"
fit_content = true

[node name="Frame6" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/VialPanel6"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_lo0vu")
stretch_mode = 5
